add minimalrevision class to save storage when collecting grouped revisions map